--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Ethereum App</title>
+    <title>Diplom Swap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
